# controllers/Events.js
@@ -4,11 +4,18 @@ var utils = require('../utils/writer.js');
 var Events = require('../service/EventsService');
 
 module.exports.getEvents = function getEvents (req, res, next) {
-  Events.getEvents()
+  var month = req.swagger.params['month'].value;
+  var staffID = req.swagger.params['staffID'].value;
+  const filters = {
+    month:month,
+    staffID:staffID
+  }
+  Events.getEvents(filters)
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
+      console.log('response errpr',response)
       utils.writeJson(res, response);
     });
 };
@@ -16,6 +23,16 @@ module.exports.getEvents = function getEvents (req, res, next) {
 module.exports.getEventsID = function getEventsID (req, res, next) {
   var eventID = req.swagger.params['eventID'].value;
   Events.getEventsID(eventID)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+module.exports.getEventsBystaffID = function getEventsID (req, res, next) {
+  var staffid = req.swagger.params['staffID'].value;
+  Events.getEventsByStaffId(staffid)
     .then(function (response) {
       utils.writeJson(res, response);
     })
